--- a/server/build.gradle
+++ b/server/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'app.depression'
+version '0.1 - TEST VERSION'
 
 repositories {
     mavenCentral()
@@ -19,8 +19,16 @@ dependencies {
     // https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.28.v20200408'
 
+    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '9.4.30.v20200611'
+
+    compile group:  'org.hibernate', name: 'hibernate', version:  '3.5.4-Final'
+
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.11.Final'
+    implementation 'org.hibernate:hibernate-core:5.4.11.Final'
+
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
+    implementation 'mysql:mysql-connector-java:8.0.21'
 
 
 }
