New DBService.getListOfNotes method for period of time(first version, at least it's working). Also new NoteService.getAllUserNotesInTimePeriod method and some changes in ServletGetListOfNotes to handle with DBService.getListOfNotes.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'app.depression'
-version '0.2.29 - TEST VERSION'
+version '0.2.29-TEST_VERSION'
 
 task fatJar(type: Jar) {
     manifest {
